[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/menus/choosemenu.gd" type="Script" id=1]
[ext_resource path="res://art/menuchoose/bgchoose.png" type="Texture" id=2]
[ext_resource path="res://art/menuchoose/lindinhachosse.png" type="Texture" id=3]
[ext_resource path="res://art/menuchoose/docinhochoose.png" type="Texture" id=4]
[ext_resource path="res://art/menuchoose/florzinhachoose.png" type="Texture" id=5]
[ext_resource path="res://art/menuchoose/selectbutton.png" type="Texture" id=6]

[node name="choosemenu" type="Node"]

script = ExtResource( 1 )

[node name="itens" type="Node2D" parent="." index="0"]

[node name="bg" type="Sprite" parent="itens" index="0"]

texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="choose" type="Sprite" parent="itens" index="1"]

texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="choose2" type="Sprite" parent="itens" index="2"]

position = Vector2( 1296.53, 0 )
texture = ExtResource( 4 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="choose3" type="Sprite" parent="itens" index="3"]

position = Vector2( 647.006, 0 )
texture = ExtResource( 5 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="control" type="Control" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Button" type="Button" parent="control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 86.0
margin_top = 897.0
margin_right = 528.0
margin_bottom = 1035.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 6 )
flat = true
align = 1

[node name="Button2" type="Button" parent="control" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 734.0
margin_top = 897.0
margin_right = 1176.0
margin_bottom = 1035.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 6 )
flat = true
align = 1

[node name="Button3" type="Button" parent="control" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1389.0
margin_top = 897.0
margin_right = 1831.0
margin_bottom = 1035.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
icon = ExtResource( 6 )
flat = true
align = 1

[connection signal="pressed" from="control/Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="control/Button2" to="." method="_on_Button2_pressed"]

[connection signal="pressed" from="control/Button3" to="." method="_on_Button3_pressed"]


